# python_assignment

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  get_raw_data.py  model.py  mypy.ini  pyproject.toml  requirements.txt  startup.sh
financial/: main.py
