[tool.poetry]
name = "python-assignment"
version = "0.1.0"
description = ""
authors = ["Ilia Pasechnikov <ilia.pasechnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "python_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"
src_paths = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
